--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,34 @@
 services:
-  postgres:
+  kc_db:
     image: postgres:15
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 5s
+      timeout: 30s
+      retries: 5
     environment:
-      POSTGRES_DB: keycloak
-      POSTGRES_USER: keycloak
-      POSTGRES_PASSWORD: password
+      POSTGRES_DB: devzone
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: secret
+    volumes:
+      - pgdata:/var/lib/postgresql/data
+    networks:
+      - keycloak_net
+  db:
+    image: postgres:15
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 5s
+      timeout: 30s
+      retries: 5
+    environment:
+      POSTGRES_DB: devzone
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: secret
     volumes:
       - postgres_data:/var/lib/postgresql/data
+    ports:
+      - "5432:5432"
     networks:
       - backend
 
@@ -17,16 +39,17 @@ services:
       KEYCLOAK_ADMIN: admin
       KEYCLOAK_ADMIN_PASSWORD: admin
       KC_DB: postgres
-      KC_DB_URL_HOST: kc_postgres   
-      KC_DB_URL_DATABASE: keycloak
-      KC_DB_USERNAME: keycloak
-      KC_DB_PASSWORD: password
+      KC_DB_URL_DATABASE: devzone
+      KC_DB_USERNAME: postgres
+      KC_DB_PASSWORD: secret
+      KC_DB_URL_HOST: kc_db
     ports:
       - "8081:8080"
     depends_on:
-      - postgres
+      kc_db:
+        condition: service_healthy
     networks:
-      - backend
+      - keycloak_net
   
   backend:
     build:
@@ -34,7 +57,7 @@ services:
       dockerfile: Dockerfile
     environment:
       DB_NAME: devzone
-      DB_HOST: localhost
+      DB_HOST: db
       DB_USER: postgres
       DB_PASSWORD: secret   
       DB_PORT: 5432
@@ -42,7 +65,9 @@ services:
     ports:
       - "5000:5000"
     depends_on:
-      - postgres
+      db:
+        condition: service_healthy
+          
     networks:
       - backend
     
@@ -51,4 +76,6 @@ volumes:
   pgdata:
 networks:
   backend:
+    driver: bridge
+  keycloak_net:
     driver: bridge
