--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,6 +36,7 @@
     "@tiptap/react": "^3.19.0",
     "@tiptap/starter-kit": "^3.19.0",
     "antd": "^6.2.3",
+    "axios": "^1.13.5",
     "keycloak-js": "^26.2.3",
     "lodash.throttle": "^4.1.1",
     "quill": "^2.0.2",
