--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,6 +39,7 @@
     "axios": "^1.13.5",
     "keycloak-js": "^26.2.3",
     "lodash.throttle": "^4.1.1",
+    "moment": "^2.30.1",
     "quill": "^2.0.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
