--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -62,6 +62,10 @@ services:
       DB_PASSWORD: secret   
       DB_PORT: 5432
       SERVER_PORT: 5000
+      KEYCLOAK_REALM_ULR: "http://localhost:8081/realms/devzone" 
+      CLIENT_ID: "backend-api"
+      KEYCLOAK_USER: "admin"
+      KEYCLOAK_PASSWORD: "admin"
     ports:
       - "5000:5000"
     depends_on:
